<resources>
    <string name="app_name">MyLibrary</string>
    <string name="my_library">My Library</string>
    <string name="txtlicence">Developed by Rizni riznicreation.com</string>
    <string name="all_books">All Books</string>
    <string name="currently_reading_books">Currently Reading Books</string>
    <string name="already_read_books">Already Read Books</string>
    <string name="wishlist">Wishlist</string>
    <string name="favourite">Favourite</string>
    <string name="about">About</string>
    <string name="author">Author</string>
    <string name="short_descriptions">Descriptions</string>
    <string name="user_picture">User picture</string>
    <string name="book_id">Book ID</string>
    <string name="book_name">Book Name</string>
    <string name="book_author">Book Author</string>
    <string name="book_pages">Book Pages</string>
    <string name="short_description">Short description</string>
    <string name="long_description">Long description</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search_book">Search book</string>
    <string name="buy_now">Buy Now</string>
</resources>